2008-09-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/version.m4: Bump RTEMS_API to 4.10.
	Bump _RTEMS_VERSION to 4.9.99.0.

2008-09-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/shell/main_mallocinfo.c, libmisc/shell/main_wkspaceinfo.c:
	Include information on whether C Program Heap and RTEMS Workspace are
	separate.

2008-09-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libfs/Makefile.am: Do not build nfsclient if no networking.

2008-09-18	Miao Yan <yanmiaobest@gmail.com>

	* libfs/src/devfs/devclose.c, libfs/src/devfs/devfs_eval.c,
	libfs/src/devfs/devioctl.c, libfs/src/devfs/devopen.c,
	libfs/src/devfs/devread.c, libfs/src/devfs/devwrite.c: Fix warnings.

2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Doxyfile.in, rtems/mainpage.h, score/include/rtems/system.h: Move to
	generating Doxygen for more of CPU Kit.
	* rtems/Doxyfile, score/Doxyfile, score/mainpage.h: Removed.

2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Add generated Doxyfile which can process entire set of
	preinstalled .h files.
	* Doxyfile.in: New file.

2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sapi/include/confdefs.h: Rename STACK_CHECKER_ON to more appropriate
	CONFIGURE_STACK_CHECKER_ENABLED.

2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libfs/src/devfs/devclose.c, libfs/src/devfs/devfs_init.c,
	libfs/src/devfs/devfs_show.c, libfs/src/devfs/devioctl.c,
	libfs/src/devfs/devopen.c, libfs/src/devfs/devread.c,
	libfs/src/devfs/devwrite.c: Fix warnings.

2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/free.c, libcsupport/src/malloc.c,
	libcsupport/src/malloc_initialize.c, libcsupport/src/malloc_p.h,
	libcsupport/src/malloc_sbrk_helpers.c,
	libcsupport/src/malloc_statistics_helpers.c,
	libcsupport/src/malloc_walk.c, libcsupport/src/mallocfreespace.c,
	libcsupport/src/mallocinfo.c, libcsupport/src/realloc.c,
	libcsupport/src/rtems_memalign.c, sapi/include/confdefs.h,