@@ -1,3 +1,9 @@
+2008-09-22	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* include/rtems/bspIo.h, libcsupport/Makefile.am: Add genchark() for
+	polled debug input from the same device as printk().
+	* libcsupport/src/getchark.c: New file.
+
 2008-09-22	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* aclocal/version.m4: Bump RTEMS_API to 4.10.
